# relation-graph-ic

./: .gitignore  Cargo.toml  README.md  base.ttl  build.sh  dfx.json
data/: relation_samples.ttl
relation-graph-api/: Cargo.toml  askama.toml
relation-graph-api/src/: acl.rs  api.rs  db.rs  error.rs  lib.did  lib.rs
relation-graph-api/templates/sparql/: acl_delete.rq  acl_exists.rq  acl_insert.rq  acl_query_by_id.rq  acl_show.rq
relation-graph-core/: Cargo.toml
relation-graph-core/benches/: store.rs
relation-graph-core/src/: lib.rs
relation-graph-core/src/ic/: mod.rs
relation-graph-core/src/io/: format.rs  read.rs  write.rs
relation-graph-core/src/model/: blank_node.rs  literal.rs  named_node.rs  parser.rs
relation-graph-core/src/model/xsd/: date_time.rs  decimal.rs  parser.rs
relation-graph-core/src/ogm/: mod.rs
relation-graph-core/src/sparql/: algebra.rs  eval.rs  mod.rs  model.rs  parser.rs  plan_builder.rs  service.rs  update.rs
relation-graph-core/src/sparql/results/: csv_results.rs
relation-graph-core/src/store/: memory.rs  mod.rs  numeric_encoder.rs
relation-graph-core/tests/: mem_store.rs
relation-graph-demo/: README.md  package-lock.json  package.json
relation-graph-demo/public/: index.html
relation-graph-demo/src/: index.css  index.tsx
relation-graph-demo/src/HelloGraph/: index.css  index.tsx
relation-graph-demo/src/HelloGraph/components/: ActionBtn.tsx
relation-graph-demo/src/HelloGraph/utils/: constant.ts  db.ts
relation-graph-demo/src/RelationGraph/: constant.ts  index.d.ts  index.ts
relation-graph-demo/src/RelationGraph/db/: command.ts  db.d.ts  index.ts  sql.ts
relation-graph-demo/src/RelationGraph/db/parse/: csv.ts  prefix.ts
relation-graph-demo/src/RelationGraph/identity/: graph.did.ts  identity.d.ts  index.ts
