[package]
name = "relation-graph-api"
version = "0.1.0"
authors = ["relationlabs"]
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["database"]
description = "a SPARQL database API"
edition = "2018"
# Setting package to false to prevent accidental publishing of
# code to crates.io, as described here:
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.5.7"
ic-cdk-macros = "0.5.7"
candid = "0.7.18"
relation-graph-core = { version = "0.1", path= "../relation-graph-core" }

thiserror = "1"
serde = { version = "1.0", features = ["derive"] }
strum = { version = "0.23", features = ["derive"] }
once_cell = "1.8"
num-traits = "0.2"
askama = "0.11"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version="0.2", features=["custom"]}
