[package]
name = "relation-graph-core"
version = "0.1.0"
authors = ["relationlabs"]
readme = "README.md"
keywords = ["RDF", "SPARQL", "graph-database", "database"]
categories = ["database"]
description = "a SPARQL database and RDF toolkit"
edition = "2018"
# Setting package to false to prevent accidental publishing of
# code to crates.io, as described here:
# https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish--field-optional
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true

[features]
default = []
sophia = ["sophia_api"]
http_client = ["httparse", "native-tls"]

# sparql-results
# NOTE: sparql-results-csv has no external dependency and enabled by default
sparql-results-json = ["json-event-parser"]
sparql-results-xml = ["quick-xml"]

[dependencies]
# ic dependencies
ic-cdk = "0.5.7"
ic-cdk-macros = "0.5.7"

# ogm dependencies
serde_json = "1.0"
#serde-json-core ="0.4"
serde = { version = "1.0", features = ["derive"] }

# core dependencies
rand = "0.8"
md-5 = "0.9"
sha-1 = "0.9"
sha2 = "0.9"
digest = "0.9"
regex = "1"
hex = "0.4"
nom = "6"
peg = "0.7"
lasso = { version = "0.5", features = ["multi-threaded", "inline-more"] }

# graphdb related
# language tag normalization and validation
oxilangtag = "0.1"
# IRI validation and relative IRI resolution
oxiri = "0.1"
# RDF parsers library (https://github.com/oxigraph/rio)
rio_api = "0.5"
rio_turtle = "0.5"
rio_xml = "0.5"

# feature: sophia
# toolkit for working with RDF and Linked Data
sophia_api = { version = "0.6.2", optional = true }

http = "0.2"
httparse = { version = "1", optional = true }
native-tls = { version = "0.2", optional = true }

# feature: sparql-results-json
json-event-parser = { version = "0.1", optional = true }
# feature: sparql-results-xml
quick-xml = { version = "0.22", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = {version="0.2", features=["custom"]}

[dev-dependencies]
rayon = "1"
criterion = "0.3"
sophia_api = { version = "0.6.2", features = ["test_macro"] }

[[bench]]
name = "store"
harness = false
